# Edit-Image

./: .gitignore  README.md
backend/: CLAUDE.md  config.py  main.py  pyproject.toml
backend/routers/: barcode.py  batch_process.py  batch_rename.py  batch_resize.py  blur_mosaic.py  change_bg.py  color_analysis.py  color_filter.py  color_picker.py  compress.py  crop_rotate.py  curve.py  dehaze.py  dpi.py  duplicate.py  encrypt.py  face_beauty.py  format_convert.py  grid_split.py  histogram.py  hsl.py  id_photo.py  image_info.py  long_stitch.py  meme.py  perspective.py  photo_collage.py  photo_restore.py  preset_save.py  privacy_erase.py  qr_decode.py  qrcode_gen.py  quality_score.py  remove_bg.py  rounded_border.py  shadow.py  similarity.py  sketch_effect.py  smart_search.py  social_media.py  (+7 more)
backend/services/: content_moderation.py  embedding.py  image_utils.py  tool_descriptions.py
docs/: ARCHITECTURE.md  blog-post.md  design.md
docs/superpowers/plans/: 2026-05-25-ai-smart-search-plan.md
docs/superpowers/specs/: 2026-05-25-ai-smart-search-design.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/api/: index.ts
frontend/src/components/: ColorPicker.vue  DownloadButton.vue  EmptyState.vue  ImageCompare.vue  ImageUploader.vue  ParamSlider.vue  ToolPage.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/styles/: global.css
frontend/src/views/: AllTools.vue  Barcode.vue  BatchProcess.vue  BatchRename.vue  BatchResize.vue  BlurMosaic.vue  ChangeBg.vue  ColorAnalysis.vue  (+40 more)
